2008-12-18  Mats Cronqvist  <masse@kreditor.se>

	* *: tagged and uploaded 4.03

	* otp_doc.erl : the strategy for completion is this; try otp_doc
	first, since it's faster. if it comes up empty, xref should kick
	in. alas, otp_doc was signalling failure to find by
	returning {ok,[]} instead of {error,R}.

2008-09-23  Mats Cronqvist  <masse@kreditor.se>

	* doc: xemacs doesn't ship with ewoc.el. documented this, with a
	pointer to savannah.

	2008-09-05  Mats Cronqvist  <masse@kreditor.se>

	* Makefile: the "make install" target and "erl-load-backend"
	disagreed on where the beam files where supposed to live. changed
	the makefile and updated the INSTALL file.

2008-07-31  Mats Cronqvist  <masse@kreditor.se>

	* various: fixed docs and compiler warnings, and made a 4.0
	release.

2008-05-23  Mats Cronqvist  <masse@kreditor.se>

	* src/otp_doc.erl (funcsf):

	yet another edge case in the broken line handling
	
	* src/otp_doc.erl (handle_link): 	

	added code for the case where you are looking for links and have
	several hits, but one is exact. e.g., when searching for
	gen_server:start/4, you probably want that and not
	gen_server:start_link/4.
	
2008-05-13  Mats Cronqvist  <masse@kreditor.se>

	* src/otp_doc.erl:
	* src/distel.erl:
	* elisp/erl-service.el:
	
	changed completion support (erl-complete) to try completions from
	the html docs first, and fall back to xref if that fails. old
	behaviour was to try xref only. not so great since;
	
	xref is annoyingly slow
	xref also completes internal exports (arguably a feature?)
	
	elisp functions to browse the docs;
	erl-find-doc
	erl-find-sig
	erl-find-sig-under-point
	erl-find-doc-under-point

2008-04-15  Mats Cronqvist  <masse@kreditor.se>

	* src/otp_doc.erl: 
	added modules/1 and functions/2
	fixed special case for the gen_server/gen_fsm callbacks

	* src/otp_doc.erl: 
	handled the special case of the "erlang" module.
	handling the F-A delimiter that changed between R11 and R12.
